# sparebank1-fetch

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
sb1/: auth.py  cli.py  client.py
