[project]
name = "sparebank1-fetch"
version = "0.1.0"
description = "CLI tool for fetching transactions from SpareBank1 personal API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
]

[project.scripts]
sb1 = "sb1.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sb1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
